Bug 420145 - Legend is not printed properly
Summary: Legend is not printed properly
Status: RESOLVED FIXED
Alias: None
Product: calligrachart
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Inge Wallin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-04-16 05:04 UTC by Dag Andersen
Modified: 2020-04-16 11:09 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.1.90
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dag Andersen 2020-04-16 05:04:43 UTC
SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Dag Andersen 2020-04-16 10:00:43 UTC
Git commit 814393ae774158040f9bc3a72c6f1bd9b395af38 by Dag Andersen.
Committed on 16/04/2020 at 05:05.
Pushed by danders into branch 'master'.

Chart: Fix Bug 420145 - Legend is not printed properly

Depends on KChart 2.7

M  +11   -0    plugins/chartshape/Legend.cpp

https://commits.kde.org/calligra/814393ae774158040f9bc3a72c6f1bd9b395af38