Chart: Fix Bug 420145 - Legend is not printed properly

Depends on KChart 2.7
BUG: 420145